--- a/content/templates/front/pages/categories.twig
+++ b/content/templates/front/pages/categories.twig
@@ -56,3 +56,7 @@
         </div>
     </div>
 {% endblock %}
+
+{% block sidebar %}
+    {# Полностью переопределяем блок сайдбара - оставляем пустым #}
+{% endblock %}
