перебраны все шаблоны в .twig, стили вынесены в отдельные файлы, исправлен баг что открывается одна и та же статья, сделан layout.twig для собирания шаблонов

--- a/content/templates/front/blocks/404.twig
+++ b/content/templates/front/blocks/404.twig
@@ -1,8 +1,8 @@
 {% extends "layout.twig" %}
 
 {% block styles %}
-    <link href="/assets/css/error.css" rel="stylesheet">
-    <link href="/assets/css/pixelAnimation.css" rel="stylesheet">
+    <link href="/assets/front/css/error.css" rel="stylesheet">
+    <link href="/assets/front/css/pixelAnimation.css" rel="stylesheet">
 {% endblock %}
 
 {% block page_header_and_breadcrumbs %}
