--- a/content/templates/front/pages/article.twig
+++ b/content/templates/front/pages/article.twig
@@ -1,7 +1,7 @@
 {% extends "layout.twig" %}
 
 {% block styles %}
-    <link href="/assets/css/article.css" rel="stylesheet">
+    <link href="/assets/front/css/article.css" rel="stylesheet">
 {% endblock %}
 
 {% block page_header_and_breadcrumbs %}
@@ -72,5 +72,5 @@
 {% endblock %}
 
 {% block java_script %}
-    <script src="/assets/js/readTime.js"></script>
+    <script src="/assets/front/js/readTime.js"></script>
 {% endblock %}
