--- a/content/templates/front/pages/articles.twig
+++ b/content/templates/front/pages/articles.twig
@@ -1,7 +1,6 @@
 {% extends "layout.twig" %}
 
 {% block styles %}
-    {#  <link href="/assets/css/articles.css" rel="stylesheet"> #}
     <style>
         /* Grid Layout */
         .articles-band {
@@ -220,10 +219,8 @@
     </div>
 {% endblock %}
 
-{% block sidebar %}
-    {# Полностью переопределяем блок сайдбара - оставляем пустым #}
-{% endblock %}
+
 
 {% block java_script %}
-    <script src="/assets/js/articles.js"></script>
+    <script src="/assets/front/js/articles.js"></script>
 {% endblock %}
