--- a/content/templates/front/pages/categories.twig
+++ b/content/templates/front/pages/categories.twig
@@ -1,7 +1,7 @@
 {% extends "layout.twig" %}
 
 {% block styles %}
-    <link href="/assets/css/categories.css" rel="stylesheet">
+    <link href="/assets/front/css/categories.css" rel="stylesheet">
 {% endblock %}
 
 {% block page_header_and_breadcrumbs %}
@@ -57,6 +57,3 @@
     </div>
 {% endblock %}
 
-{% block sidebar %}
-    {# Полностью переопределяем блок сайдбара - оставляем пустым #}
-{% endblock %}
