--- a/content/templates/front/pages/about.twig
+++ b/content/templates/front/pages/about.twig
@@ -1,7 +1,7 @@
 {% extends "layout.twig" %}
 
 {% block styles %}
-<link href="/assets/css/about.css" rel="stylesheet">
+<link href="/assets/front/css/about.css" rel="stylesheet">
 {% endblock %}
 
 {% block page_header_and_breadcrumbs %}
